# scipopt-nix

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  gcg.nix  ipopt-mumps.nix  justfile  mumps.nix  nvfetcher.toml  papilo.nix  pygcgopt.nix  pyscipopt.nix  pysoplex.nix  scip.nix  scipoptsuite-src.nix  scippp.nix  shell.nix  soplex.nix  zimpl.nix
_sources/: generated.json  generated.nix
checks/: default.nix
patches/: gcg_dirs.patch  papilo_dirs.patch  pygcgopt_dirs.patch  pyscipopt_dirs.patch  pysoplex_dirs.patch  scip_dirs.patch  soplex_dirs.patch  vipr_install.patch  zimpl_dirs.patch
templates/: default.nix
templates/gcg/: .gitignore  CMakeLists.txt  flake.nix  main.c
templates/pygcgopt/: flake.nix  main.py
templates/pyscipopt/: flake.nix  main.py
templates/scip/: CMakeLists.txt  flake.nix  main.c
